--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.jpa.hibernate.ddl-auto=none
 spring.h2.console.enabled=true
 spring.mvc.hiddenmethod.filter.enabled=true
 spring.sql.init.mode=always
+spring.servlet.multipart.max-file-size =100MB
+spring.servlet.multipart.max-request-size =100MB
